# AUTOSAR-AP

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CMakeSettings.json  LICENSE  README.md  ap_Debug  ap_Release  build.sh  conanfile.txt  x86_64_toolchain
cmake/: vito_ap.cmake
include/private/ara/log/: dlt_message.h  log_config.h  log_stream_buffer.h  logger_manager.h  logging_handler.h
include/public/ara/core/: abort.h  array.h  core_error_domain.h  error_code.h  error_domain.h  exception.h  future.h  future_error_domain.h  initialization.h  instance_specifier.h  map.h  optional.h  promise.h  result.h  scale_linear_and_texttable.h  singleton_pattern.h  span.h  steady_clock.h  string.h  string_view.h  utility.h  variant.h  vector.h
include/public/ara/exec/: deterministic_client.h  exec_error_domain.h  execution_client.h
include/public/ara/log/: common.h  log_error_domain.h  log_fwd.h  log_stream.h  logger.h
src/: CMakeLists.txt
src/application/: CMakeLists.txt
src/application/exec/: CMakeLists.txt  exec_error_domain.cpp  execution_client.cpp  execution_manager.cpp
src/application/exec/config/: MANIFEST.json
src/ara/: CMakeLists.txt
src/ara/core/: CMakeLists.txt  abort.cpp  core_error_domain.cpp  error_code.cpp  future_error_domain.cpp  initialization.cpp
src/ara/log/: CMakeLists.txt  dlt_message.cpp  log_config.cpp  log_error_domain.cpp  log_stream.cpp  logger.cpp  logger_manager.cpp  logging_handler.cpp
